--- a/criar_evento.html
+++ b/criar_evento.html
@@ -63,7 +63,7 @@
         </div>
     </div>
 
-    <a href="./encagados.html" class="voltar">Voltar</a>
+    <a href="./index.html" class="voltar">Voltar</a>
 
 
     <script>
