--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <span class="nome-categoria">Ciclismo</span>
             </div>
             <div class="categoria-individual">
-                    <span class="nome-categoria">Volêi</span>
+                    <span class="nome-categoria">Vôlei</span>
             </div>
             <div class="categoria-individual">
                     <span class="nome-categoria">Trilha</span>
