--- a/criar_evento.html
+++ b/criar_evento.html
@@ -11,7 +11,7 @@
     <div class="menu-superior">
         <li><a href="">Categorias</a></li>
         <li><a href="">Ranking</a></li>
-        <li><a href="">Sobre nós</a></li>
+        <li><a href="./sobre_nos.html">Sobre nós</a></li>
         <li><a href="">Contato</a></li>
         <img src="./logo.png" class="img-logo">
         </div>
@@ -24,7 +24,7 @@
             <ul>
                 <li><a href="">Minha conta</a></li>
                 <li><a href="">Meus eventos</a></li>
-                <li><a href="./criar_evento.html">Criar evento</a></li>
+                <li><a href="./criar_evento.html" class="pagina-aberta">Criar evento</a></li>
                 <li><a href="">Configurações</a></li>            
             </ul>
             <span class="sair"><a href="">Sair</a></span>
@@ -63,7 +63,7 @@
         </div>
     </div>
 
-    <a href="./index.html" class="voltar">Voltar</a>
+    <a href="./index.html" class="home">Home</a>
 
 
     <script>
