--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="menu-superior">
         <li><a href="">Categorias</a></li>
         <li><a href="">Ranking</a></li>
-        <li><a href="">Sobre nós</a></li>
+        <li><a href="./sobre_nos.html">Sobre nós</a></li>
         <li><a href="">Contato</a></li>
         <img src="./logo.png" class="img-logo">
         
