--- a/criar-evento.html
+++ b/criar-evento.html
@@ -60,7 +60,7 @@
         <div class="evento">
             <span>Crie seu evento</span>
 
-            <form action="">
+            <form class="formulario">
                 Nome do evento:<br>
                 <input type="text" id="txtBusca2" placeholder="Digite o nome do evento..."><br>
                 Categoria:<br><select name="categoria" id="seletorCategorias">
@@ -98,5 +98,21 @@
             <p>Copyright © 2018 | Encangados</p>
         </div>
 
+    <script>
+        let botaoForm = document.querySelector(".btnBusca");
+        let evento = document.querySelector(".evento");
+        let form = document.querySelector(".formulario");
+        botaoForm.addEventListener("click", function(event){
+            event.preventDefault();
+            evento.innerHTML="";
+            let novo_p = document.createElement("span");
+            novo_p.classList.add(".btnBusca");
+            let texto_p = document.createTextNode("Evento marcado com sucesso!");
+            let novo_br = document.createElement("br");
+            novo_p.appendChild(texto_p);
+            evento.appendChild(novo_p);
+            evento.style.height="75vh";
+        })
+    </script>
 </body>
 </html>
