--- a/contato.html
+++ b/contato.html
@@ -59,50 +59,36 @@
             <div class="opcao"><a href="sobre.html">Sobre Nós</a></div>
             <div class="opcao"><a href="contato.html">Contato</a></div>
         </nav>
-        <div class="container2">
-            <div class="categorias-titulo">
-                <span>Categorias</span>
-            </div>
-            <div class="categorias">
-                <a href="corrida.html"><div class="circulo">
-                    <img src="corrida2.jpg"><span class="text-categoria">Corrida</span> 
-                </div></a>
-                <a href="futsal.html"><div class="circulo">
-                    <img src="futsal.jpg"><span class="text-categoria">Futsal</span>
-                </div></a>
-                <a href="volei.html"><div class="circulo">
-                    <img src="volei.jpg"><span class="text-categoria">Vôlei</span>
-                </div></a>
-                <a href="danca.html"><div class="circulo">
-                    <img src="danca.jpg"><span class="text-categoria">Dança</span>
-                </div></a>
-                <a href="trilha.html"><div class="circulo">
-                    <img src="trilha.jpg"><span class="text-categoria">Trilha</span>
-                </div></a>
-                <a href="bike.html"><div class="circulo">
-                    <img src="bike.jpg"><span class="text-categoria">Ciclismo</span>
-                </div></a>
-                <a href="bike.html"><div class="circulo">
-                    <img src="futebol.jpg"><span class="text-categoria">Futebol</span>
-                </div></a>
-                <a href="bike.html"><div class="circulo">
-                    <img src="natacao.jpg"><span class="text-categoria">Natação</span>
-                </div></a>
-                <a href="bike.html"><div class="circulo">
-                    <img src="tdm.jpg"><span class="text-categoria">Ciclismo</span>
-                </div></a>
-                <a href="bike.html"><div class="circulo">
-                    <img src="yoga.jpg"><span class="text-categoria">Yoga</span>
-                </div></a>
 
+        <div class="contao-container">
+            <div class="ranking-titulo">
+                <span>Contato</span>
+            </div>
+            <div class="contact">
+                <p>Envie uma mensagem para a Secretaria de Cultura, Esporte e Juventude</p>
+                <div class="hr-contato"><hr></div> 
+                <span>Você pode manifestar sua opinião sobre os eventos, a plataforma e/ou a própria secretaria.</span>
+                <div class="container7">
+                    <div class="lado-esquerdo">
+                        <form action="">
+                            Nome:<br>
+                            <input type="text" placeholder="Digite seu nome" class="txtContato" required="required"><br>
+                            Email:<br>
+                            <input type="text" placeholder="Digite seu email" class="txtContato" required="required"><br>
+                            Telefone:<br>
+                            <input type="text" placeholder="Digite seu telefone" class="txtContato"><br>
+                            Mensagem:<br>
+                            <textarea placeholder="Digite sua mensagem" required="required" class="txtContatoMaior"></textarea>
+                            <button>Enviar mensagem</button>
+                        </form>
+                    </div>
+                    <div class="lado-direito">
+                        <span>Secretaria de Cultura, Esporte e Juventude</span>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1987.4053857861734!2d-39.01356037548872!3d-4.9710963147224545!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2198e1f6997317b7!2sCentro+Cultural+Rachel+de+Queiroz!5e0!3m2!1spt-BR!2sbr!4v1543424248407" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                    </div>
+                </div>
             </div>
         </div>
-
-
-
-
-
-
 
         <div class="rodape">
             <div class="redes">
@@ -112,5 +98,10 @@
             </div>
             <p>Copyright © 2018 | Encangados</p>
         </div>
+
+
+
+
+
 </body>
 </html>
