--- a/config.html
+++ b/config.html
@@ -59,47 +59,23 @@
             <div class="opcao"><a href="sobre.html">Sobre Nós</a></div>
             <div class="opcao"><a href="contato.html">Contato</a></div>
         </nav>
-        <div class="container2">
-            <div class="categorias-titulo">
-                <span>Categorias</span>
-            </div>
-            <div class="categorias">
-                <a href="corrida.html"><div class="circulo">
-                    <img src="corrida2.jpg"><span class="text-categoria">Corrida</span> 
-                </div></a>
-                <a href="futsal.html"><div class="circulo">
-                    <img src="futsal.jpg"><span class="text-categoria">Futsal</span>
-                </div></a>
-                <a href="volei.html"><div class="circulo">
-                    <img src="volei.jpg"><span class="text-categoria">Vôlei</span>
-                </div></a>
-                <a href="danca.html"><div class="circulo">
-                    <img src="danca.jpg"><span class="text-categoria">Dança</span>
-                </div></a>
-                <a href="trilha.html"><div class="circulo">
-                    <img src="trilha.jpg"><span class="text-categoria">Trilha</span>
-                </div></a>
-                <a href="bike.html"><div class="circulo">
-                    <img src="bike.jpg"><span class="text-categoria">Ciclismo</span>
-                </div></a>
-                <a href="bike.html"><div class="circulo">
-                    <img src="futebol.jpg"><span class="text-categoria">Futebol</span>
-                </div></a>
-                <a href="bike.html"><div class="circulo">
-                    <img src="natacao.jpg"><span class="text-categoria">Natação</span>
-                </div></a>
-                <a href="bike.html"><div class="circulo">
-                    <img src="tdm.jpg"><span class="text-categoria">Ciclismo</span>
-                </div></a>
-                <a href="bike.html"><div class="circulo">
-                    <img src="yoga.jpg"><span class="text-categoria">Yoga</span>
-                </div></a>
 
+        <div class="container3">
+            <div class="minha-config">
+                <img src="perfil3.png" class="img-perfil"><br>
+                Configurações<br><br>
+                <div class="texto-config">
+                    <form action="">
+                        <p>Nome:</p> <input type="text" id="txtBusca3" placeholder="Alexya Calixto"><br>
+                        <p>Email:</p> <input type="text" id="txtBusca3" placeholder="alexyacalixto@hotmail.com"><br>
+                        <p>Data de nascimento:</p> <input type="text" id="txtBusca3" placeholder="01/01/0001"><br>
+                        <p>CPF:</p> <input type="text" id="txtBusca3" placeholder="123.321.111-00"><br>
+                        <p>Telefone:</p> <input type="text" id="txtBusca3" placeholder="(88)9.9999-0000"><br>
+                        <button class="button-config">Salvar</button>
+                    </form>
+                </div><br>                
             </div>
         </div>
-
-
-
 
 
 
@@ -112,5 +88,6 @@
             </div>
             <p>Copyright © 2018 | Encangados</p>
         </div>
+
 </body>
 </html>
