--- a/corrida-praca-do-leao.html
+++ b/corrida-praca-do-leao.html
@@ -59,50 +59,52 @@
             <div class="opcao"><a href="sobre.html">Sobre Nós</a></div>
             <div class="opcao"><a href="contato.html">Contato</a></div>
         </nav>
-        <div class="container2">
-            <div class="categorias-titulo">
-                <span>Categorias</span>
-            </div>
-            <div class="categorias">
-                <a href="corrida.html"><div class="circulo">
-                    <img src="corrida2.jpg"><span class="text-categoria">Corrida</span> 
-                </div></a>
-                <a href="futsal.html"><div class="circulo">
-                    <img src="futsal.jpg"><span class="text-categoria">Futsal</span>
-                </div></a>
-                <a href="volei.html"><div class="circulo">
-                    <img src="volei.jpg"><span class="text-categoria">Vôlei</span>
-                </div></a>
-                <a href="danca.html"><div class="circulo">
-                    <img src="danca.jpg"><span class="text-categoria">Dança</span>
-                </div></a>
-                <a href="trilha.html"><div class="circulo">
-                    <img src="trilha.jpg"><span class="text-categoria">Trilha</span>
-                </div></a>
-                <a href="bike.html"><div class="circulo">
-                    <img src="bike.jpg"><span class="text-categoria">Ciclismo</span>
-                </div></a>
-                <a href="bike.html"><div class="circulo">
-                    <img src="futebol.jpg"><span class="text-categoria">Futebol</span>
-                </div></a>
-                <a href="bike.html"><div class="circulo">
-                    <img src="natacao.jpg"><span class="text-categoria">Natação</span>
-                </div></a>
-                <a href="bike.html"><div class="circulo">
-                    <img src="tdm.jpg"><span class="text-categoria">Ciclismo</span>
-                </div></a>
-                <a href="bike.html"><div class="circulo">
-                    <img src="yoga.jpg"><span class="text-categoria">Yoga</span>
-                </div></a>
 
+        <div class="container5">
+            <div class="barra-topo">
+                <div class="foto-evento">
+                    <img src="foto-evento.jpg">
+                </div>
+                <div class="info-evento">
+                        <h2>Corrida na Praça do Leão</h2><br>
+                        Alexya Calixto<br>
+                        29/11<br>
+                        19h~20h<br>
+                        <div class="acessorios">
+                            Usar tênis esportivo
+                        </div>
+                        Praça do Leão - José de Barros
+                </div>
+                <div class="status">
+                    Realizado
+                </div>
+            </div>
+            <div class="container6">
+                <div class="mapa-evento">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1414.3508117592328!2d-39.01621250265072!3d-4.970216185322048!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7be9fb8828a06f7%3A0xdd4a0e5d74b77afb!2zUHJhw6dhIGRvIExlw6NvIC0gSm9zw6kgZGUgQmFycm9z!5e1!3m2!1spt-BR!2sbr!4v1543360894080" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                </div>
+                <div class="botoes">
+                    <div class="part3"><a href="">Participar</a></div>
+                    <div class="organizador-button"><a href="minha-conta.html">Ver organizador</a></div>
+                </div>
+            </div>
+            <div class="comentarios-evento">
+                <div class="comentarios-sugestoes ce">
+                    <div class="comentario">
+                        <p>Foi muito legal! Depois em manda a foto que tiramos quando terminou. <div class="texto-cinza">(Felipe Venceslau)</div></p>
+                    </div>
+                    <div class="comentario">
+                        <p>Pronta pra próxima! <div class="texto-cinza">(Gabriella Barroso)</div></p>
+                    </div>
+                    <div class="comentario">
+                        <p>Poderia ter durado mais tempo <div class="texto-cinza">(Gino)</div></p>
+                    </div>
+                    <div class="coments-evento">
+                        <input type="text" id="txtBusca" placeholder="Faça um comentário sobre o evento..."><div class="button-coments">Comentar</div>
+                    </div>
+                </div>
             </div>
         </div>
-
-
-
-
-
-
 
         <div class="rodape">
             <div class="redes">
@@ -112,5 +114,10 @@
             </div>
             <p>Copyright © 2018 | Encangados</p>
         </div>
+
+
+
+
+
 </body>
 </html>
