--- a/meus-eventos.html
+++ b/meus-eventos.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" href="marca.png" sizes="20x20" type="image/png">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
     <title>Encangados - Crie seu evento!</title>
     
@@ -64,14 +66,14 @@
                 <div class="eventos-subtitulo">Eventos Ativos</div>
                 <div class="eventos-ativos">
                     <div class="meuEvento green">
-                        <div class="eventoTitulo">Racha de Vôlei</div>
+                        <div class="eventoTitulo"><a href="futsal-racha-no-ginasio.html">Racha de futsal no ginásio</a></div>
                         <div class="eventoCorpo">
-                            10/12/2018<br>
-                            19h
+                            Toda sexta-feira<br>
+                            19h~22h
                         </div>
                     </div>
                     <div class="meuEvento green">
-                        <div class="eventoTitulo">Trilha na Pedra da Galinha Choca</div>
+                        <div class="eventoTitulo"><a href="trilha-preda-da-galinha.html">Trilha na Pedra da Galinha Choca</a></div>
                         <div class="eventoCorpo">
                             01/12/2018<br>
                             08h
@@ -81,10 +83,10 @@
                 <div class="eventos-subtitulo">Eventos Encerrados</div>
                 <div class="eventos-encerrados">
                     <div class="meuEvento red">
-                        <div class="eventoTitulo">Corrida de bike</div>
+                        <div class="eventoTitulo"><a href="corrida-praca-do-leao.html">Corrida na Praça do Leão</a></div>
                         <div class="eventoCorpo">
-                            20/10/2018<br>
-                            05h
+                            29/11<br>
+                            19h~20h
                         </div>
                     </div>
                 </div>
