--- a/minha-conta.html
+++ b/minha-conta.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" href="marca.png" sizes="20x20" type="image/png">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
     <title>Encangados - Crie seu evento!</title>
     
@@ -72,7 +74,7 @@
                 </div><br>
                 Avaliação:<br><br>
                 <div class="avaliacao-conta">
-                    <h1>3,5</h1>
+                    <h1>3,9</h1>
                     <img src="estrelas2.png" width="100px"> 
                 </div><br>
                 Conquistas:<br><br>
