--- a/ranking.html
+++ b/ranking.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" href="favicon2.png" sizes="20x20" type="image/png">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
     <title>Encangados - Crie seu evento!</title>
     
@@ -66,20 +68,25 @@
                 <div class="pessoa">
                     <img src="top1.png" height="50px" width="60px">
                     <p>Felipe Venceslau</p>
+                    <h1>4,8</h1>
                 </div>
                 <div class="pessoa1">
                     <img src="top2.png" height="40px" width="50px">
                     <p>Gabriella Barroso</p>
+                    <h1>4,5</h1>
                 </div>
                 <div class="pessoa1">
                     <img src="top3.png" height="30px" width="40px">
                     <p>Taynara Lemos</p>
+                    <h1>4,0</h1>
                 </div>
                 <div class="pessoa2">
                     <p>Alexya Calixto</p>
+                    <h1>3,9</h1>
                 </div>
                 <div class="pessoa2">
                     <p>Gino Eliaquim</p>
+                    <h1>3,8</h1>
                 </div>
             </div>
         </div>
