--- a/sobre.html
+++ b/sobre.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" href="marca.png" sizes="20x20" type="image/png">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
     <title>Encangados - Crie seu evento!</title>
     
@@ -62,16 +64,23 @@
             <div class="ranking-titulo">
                 <span>Sobre nós</span>
             </div>
-            <div class="lista">
+            <div class="lista2">
+                <h1>Encangados</h1>
+                <div class="marca-sobre"> 
+                    <img src="logotipo.png">
+                </div>
                 <p class="texto-sobre">
-                    Texto aqui Texto aqui Texto aqui Texto aqui Texto aqui Texto aqui Texto aqui 
-                    Texto aqui Texto aqui Texto aqui Texto aqui Texto aqui Texto aqui Texto aqui 
-                    Texto aqui Texto aqui Texto aqui Texto aqui Texto aqui Texto aqui Texto aqui 
-                    Texto aqui Texto aqui Texto aqui Texto aqui Texto aqui Texto aqui Texto aqui 
-                    Texto aqui Texto aqui Texto aqui Texto aqui Texto aqui Texto aqui Texto aqui 
-                    Texto aqui Texto aqui Texto aqui Texto aqui Texto aqui Texto aqui Texto aqui 
-                    Texto aqui Texto aqui Texto aqui Texto aqui Texto aqui Texto aqui Texto aqui 
-                    Texto aqui Texto aqui Texto aqui Texto aqui Texto aqui Texto aqui Texto aqui 
+                    Uma solução digital para criação de eventos esportivos, onde moradores de  Quixadá possam criar ou 
+                    buscar eventos esportivos e atividades em geral que estão acontecendo ou irão acontecer na cidade, 
+                    podendo praticar esportes e atividades em geral, coletivamente. É também uma forma de fazer uma 
+                    ligação entre as pessoas e a Secretaria de Cultura, Esporte e Juventude.
+                </p>
+                <hr>
+                <p class="texto-sobre">
+                    O município de Quixadá agora possui um sistema simples para encontrar outros moradores com os mesmo interesses, para 
+                    praticar alguma atividade física. Desde caminhar na praça até fazer uma trilha nos monólitos, 
+                    ou eventos realizados pela própria Secretaria de Cultura, Esporte e Juventude.
+                
                 </p>
             </div>
         </div>
