--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 
         <div class="banner">
             <div class="text-banner">
-                <p>Exercitando o corpo juntos<br>
-                e melhorando a saúde.</p>
+                <p>Exercitando o corpo juntos,<br>
+                melhorando a vida.</p>
             </div>
             <!--<div class="text-banner2">
                     <a href="#participar2" class="scrollSuave">Participe ou crie seu evento em Quixadá</a>
