--- a/ranking.html
+++ b/ranking.html
@@ -65,6 +65,7 @@
                 <span>Ranking</span>
             </div>
             <div class="lista">
+                <span class="titulo-ranking">Organizador encangado<br></span>
                 <div class="pessoa">
                     <img src="top1.png" height="50px" width="60px">
                     <p>Felipe Venceslau</p>
