--- a/categorias.html
+++ b/categorias.html
@@ -89,7 +89,7 @@
                     <img src="natacao.jpg"><span class="text-categoria">Natação</span>
                 </div></a>
                 <a href="bike.html"><div class="circulo">
-                    <img src="tdm.jpg"><span class="text-categoria">Ciclismo</span>
+                    <img src="tdm.jpg"><span class="text-categoria">Tênis de mesa</span>
                 </div></a>
                 <a href="bike.html"><div class="circulo">
                     <img src="yoga.jpg"><span class="text-categoria">Yoga</span>
